# kingfisher

./: .gitattributes  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  proto.gen.sh
base/: CMakeLists.txt
base/check/: check.h
base/config/: config.toml
base/config/toml/: toml.cc
base/configparser/: config_parser.h
base/configparser/src/: main.cc
base/configparser/yaml/: yaml.cc  yaml.h
base/container/: buffer.cc  buffer.h
base/core/: disable.h  likely.h  noncopyable.hpp  scope_guard.h  singleton.h  singleton.hpp
base/crypto/: crypto_base.h  hex.cc  hex.h  main.cc  md5.cc  md5.h  sha256.cc  sha256.h
base/dump/: stack_trace.cc  stack_trace.h
base/encoding/base64/: base64.cc  base64.h  modp_b64_data.h
base/encoding/utf8/: utf8.cc  utf8.h
base/file/: file.cc  file.h  file_util.cc  file_util.h
base/hash/: md5.cpp
base/lru/: lrc_cache.h  lru_cache.hpp
base/net/: ip.cc  ip.h  url.cc  url.h
base/net/event/: callback.h  channel.cc  channel.h  event_loop.cc  event_loop.h  event_loop_thread.cc  event_loop_thread.h  event_loop_thread_pool.cc  event_loop_thread_pool.h
base/net/grpc/: grpc_client.cc  grpc_client.h
base/net/http/: chain_interceptor.cc  chain_interceptor.h  curl_client.cc  curl_client.h  http_client.cc  http_client.h  http_headers.cc  http_headers.h  http_request.h  http_response.h  http_service.h  interceptor.h  types.h
base/net/poller/: epoll_poller.cc  epoll_poller.h  poller.cc  poller.h
base/net/socket/: endian.h  net.buffer.cc  net.buffer.h  socket.cc  socket.h  socket.ops.cc  socket.ops.h  socket_addr.cc  socket_addr.h  socket_stream_base.cc  socket_stream_base.h  socket_stream_block.cc  socket_stream_block.h
base/net/tcp/: acceptor.cc  acceptor.h  connection.cc  connection.h  connector.cc  connector.h  tcp_client.cc  tcp_client.h  tcp_server.cc  tcp_server.h
base/os/: getwd.cc  getwd.h
base/os/signal/: signal.cc  signal.h
base/path/: match.cc  match.h  path.cc  path.h
base/pool/: pool_instance.cc  pool_instance.h
base/pool/sdk/: sdk_pool.hpp  sdk_task.hpp
base/pool/task/: pool.hpp  task.hpp
base/random/: random.cc  random.h
base/runtime/: debug.cc  debug.h
base/serializer/: djson.cpp  djson.h  obj.hpp  test_main.cc
base/stream/: stream_buf_base.cc  stream_buf_base.h
base/strings/: strings.cc  strings.h
base/sync/: condition.cc  condition.h  mutex.cc  mutex.h  wait_group.cc  wait_group.h
base/thread/: blocking_queue.h  coroutine.cc  coroutine.context.base.cc  coroutine.context.base.h  coroutine.context.cc  coroutine.context.h  coroutine.h  thread.cc  thread.h  thread_pool.cc  thread_pool.h
base/time/: date.cc  date.h  time_counter.cc  time_counter.h  time_zone.cc  time_zone.h  timer.cc  timer.h  timestamp.cc  timestamp.h  wait.cc  wait.h
base/utils/: guid.h
base/uuid/: guid.cc  guid.h
pkg/: CMakeLists.txt
pkg/cmake/: Build.options.cmake
pkg/cv/: image.cc  image.h  image.pb.cc  image.pb.h  image.proto  types.h  wrap.func.h
pkg/cv/cvtable/: cvtable.cc  cvtable.h
pkg/cv/geometry/: geometry.cc  geometry.h
pkg/cv/image/: image.cc  image.h  image.pb.cc  image.pb.h  image.proto  image_analysis.cc  image_codec.cc  image_color.cc  image_error.h  image_filter.cc  image_io.cc  image_pipeline.cc  image_pipeline.h  image_transform.cc  wrap.func.h
pkg/cv/types/: types.h
pkg/cv/vector/: vector.cc  vector.h  vector.hpp
pkg/cv/video/: ffmpeg.h  ffmpeg_error.h  ffmpeg_filter.cc  ffmpeg_filter.h  ffmpeg_hw.cc  ffmpeg_hw.h  ffmpeg_types.h  ffmpeg_utils.cc  ffmpeg_utils.h  filter_builder.cc  filter_builder.h  input_file.cc  input_file.h  input_filter.cc  input_filter.h  input_stream.cc  input_stream.h  output_file.cc  output_file.h  output_filter.cc  output_filter.h  output_stream.cc  output_stream.h  stream.cc  stream.h
pkg/database/mysql/: mysql.cc  mysql.h
pkg/file-transfer/: config.cc  config.h  ft.grpc.pb.cc  ft.grpc.pb.h  ft.pb.cc  ft.pb.h  ft.proto  ft.transfer.cc  ft.transfer.h
pkg/grpc-gateway/: grpc_gateway.cc  grpc_gateway.h
pkg/log/: config.cc  config.h  glog_sink.h  log.pb.cc  log.pb.h  log.proto  log.yaml
pkg/middleware/api/: api_guard.h  api_guard.hpp  in_out_printer.cc  in_out_printer.h  request_id.cc  request_id.h
pkg/middleware/brpc-middleware/: in.output_printer.h
pkg/middleware/grpc-middleware/: in_out_printer.h  recovery.h  request_id.h  timer.h
pkg/middleware/http-middleware/: clean_path.h  in_out_printer.h  recovery.h  request_id.h  timer.h
pkg/webserver/: config.cc  config.h  webserver.cc  webserver.h  webserver.pb.cc  webserver.pb.h  webserver.proto  webserverbase.cc  webserverbase.h
pkg/webserver/controller/date/: api.pb.cc  api.pb.h  api.proto  date.h
pkg/webserver/controller/healthz/: healthz.h  healthz.pb.cc  healthz.pb.h  healthz.proto
pkg/webserver/example/: api.proto
pkg/webserver/http/: http_server.h
test/: CMakeLists.txt
test/base/: CMakeLists.txt  main.cpp  test_api_guard.cc  test_base64.cc  test_blocking_queue.cc  test_blocking_queue.cpp  test_coroutine.context.cc  test_coroutine.pool.cc  test_date.cc  test_djson.cc  test_djson.cpp  test_event_loop.cc  test_event_loop_thread.cc  test_event_loop_thread_pool.cc  test_file.cc  test_file_util.cc  test_group_wait.cc  test_guid.cc  test_http_client.cc  test_image.cc  test_ip.cc  test_log.cc  test_lru_cache.cc  test_match.cc  test_md5.cc  test_path.cc  test_pool_instance.cc  test_pwd.cc  test_random.cc  test_scope_guard.cc  test_sdk_pool.cc  test_sha256.cc  test_signal.cc  test_stack_trace.cc  test_strings.cc  test_tcp_client.cc  test_tcp_server.cc  test_thread.cc  test_threadpool.cc  test_time_counter.cc  (+6 more)
test/base/example/: api_date.pb.cc  api_date.pb.h  api_date.proto  webserver.grpc.pb.cc  webserver.grpc.pb.h  webserver.pb.cc  webserver.pb.h
test/pkg/: test_api_guard.cc  test_cv_geometry.cc  test_cv_table.cc  test_cv_vector.cc  test_cv_video.cc  test_file_transfer.cc  test_grpc_gateway.cc  test_image.cc  test_webserver.cc
test/proto/: api_date.pb.cc  api_date.pb.h  api_date.proto  webserver.pb.cc  webserver.pb.h
test/testdata/: cv_table.txt  ft.yaml  webserver.yaml
(+21 files in other folders)
